# rune-architect

./: .gitignore  README.md  app.py  ctk_scrollable_dropdown.py  layout.py  notebook.ipynb  opt.ipynb  preprocessing.py  pyproject.toml  runes.ipynb  runes.json
architect/: __init__.py  __main__.py  app.py  layout.py  settings.py
architect/core/data/: transform.py
architect/gui/components/: __init__.py  button.py  checkbox.py  component.py  dataframe.py  dropdown.py  editor.py  icon_button.py  messagebox.py  titlebar.py  window.py
architect/gui/stylesheets/: checkbox.css  dropdown.css
components/: __init__.py  _data_frame.py  _frame.py  _magic_button.py  _properties_frame.py  alignment.py  application_window.py  button.py  component.py  container.py  data_frame.py  dropdown.py  editor.py  icon_button.py  settings.py  title_bar.py
core/data/: extract.py  transform.py
core/data/mapping/: __init__.py  monsters.py  runes.py
core/data/schema/: __init__.py  inputs.py  monsters.py  runes.py
core/optimizer/: optimize.py  optimizer.py
core/optimizer/model/: __init__.py  formulation.py  model.py
gui/: __init__.py
gui/components/: __init__.py  application_window.py  button.py  checkbox.py  component.py  container.py  data_frame.py  dataframe.py  dropdown.py  editor.py  icon_button.py  messagebox.py  settings.py  title_bar.py  titlebar.py
gui/stylesheets/: button.css  dataframe.css  dropdown.css  editor.css
rune-architect/: __init__.py  __main__.py  layout.py
rune-architect/core/data/: transform.py
stylesheets/: container.css  data_frame.css  dropdown.css
(+19 files in other folders)
